fix: making smaller title on movies layout on mobile

--- a/client/src/layouts/MoviesLayout/MoviesLayout.module.css
+++ b/client/src/layouts/MoviesLayout/MoviesLayout.module.css
@@ -95,6 +95,10 @@
 }
 
 @media (max-width: 576px) {
+    .title {
+        font-size: var(--text-3xl);
+    }
+
     .count {
         display: none;
     }
